--- a/ConstructionSite/Views/About/Index.cshtml
+++ b/ConstructionSite/Views/About/Index.cshtml
@@ -1,96 +1,64 @@
-﻿@model AboutIndexViewModel
+﻿@model ConstructionSite.DTO.AdminViewModels.About.AboutViewModel
 @inject SharedLocalizationService Localizer
 @{
     ViewData["Title"] = "Index";
 }
-
 <div id="main-content" class="site-main clearfix">
     <div id="content-wrap">
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
-
                     <!-- GALLERY -->
                     <section class="wprt-section">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-                                    <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.OurHistoryAndFacts)</h2>
-                                    <div class="wprt-lines style-2 custom-1">
-                                        <div class="line-1"></div>
-                                    </div>
+
+
                                     <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
 
                                     <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
-                                </div>
-                                <!-- /.col-md-12 -->
+                                </div><!-- /.col-md-12 -->
 
                                 <div class="col-md-6">
-
+                                    <h3 class="line-height-normal margin-bottom-10">@Model.Tittle</h3>
                                     <div class="wprt-lines style-1 custom-3">
                                         <div class="line-1"></div>
                                     </div>
+
                                     <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25"></div>
-                                    <p class=" margin-bottom-25">@Model.Context</p>
+
+                                    <p class=" margin-bottom-25">@Model.Content</p>
+
+                                    @*<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec erat erat. Vestibulum eu libero volutpat, portas quam acc, tempus sem. Cras id justo eget sapien scelerisque lacinia non a eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec erat erat.</p>*@
+
+
+
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
-                                </div>
-                                <!-- /.col-md-6 -->
+                                </div><!-- /.col-md-6 -->
 
                                 <div class="col-md-6">
-                                    <div class="wprt-galleries galleries w-570px" data-width="135" data-margin="10">
-                                        <div id="wprt-slider" class="flexslider">
-                                            <div class="flex-viewport" style="overflow: hidden; position: relative;">
-                                                <ul class="slides" style="width: 800%; transition-duration: 0s; transform: translate3d(0px, 0px, 0px);">
-                                                    <li class="" style="width: 570px; margin-right: 0px; float: left; display: block;">
-                                                        <img src="@Model.imagePath" alt="image" draggable="false">
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                            <ul class="flex-direction-nav">
-                                                <li class="flex-nav-prev">
-                                                    <a class="flex-prev flex-disabled" href="#" tabindex="-1"><i class="fa fa-angle-left"></i></a>
-                                                </li>
-                                                <li class="flex-nav-next">
-                                                    <a class="flex-next" href="#"><i class="fa fa-angle-right"></i></a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div id="wprt-carousel" class="flexslider">
-                                            <div class="flex-viewport" style="overflow: hidden; position: relative;">
-                                                <ul class="slides" style="width: 800%; transition-duration: 0s; transform: translate3d(0px, 0px, 0px);">
-                                                    @foreach (var item in Model.path)
-                                                    {
-                                                        <li style="width: 135px; margin-right: 10px; float: left; display: block;"><img src="@item" alt="image" draggable="false"></li>
-                                                    }
-                                                </ul>
-                                            </div>
-                                            <ul class="flex-direction-nav">
-                                                <li class="flex-nav-prev">
-                                                    <a class="flex-prev flex-disabled" href="#" tabindex="-1"><i class="fa fa-angle-left"></i></a>
-                                                </li>
-                                                <li class="flex-nav-next">
-                                                    <a class="flex-next flex-disabled" href="#" tabindex="-1"><i class="fa fa-angle-right"></i></a>
-                                                </li>
-                                            </ul>
-                                        </div>
+                                    <div style="height: 400px;">
+                                        <img src="~/Images/about/150e8b03-ebe5-4560-8f99-649a3705765b.jpg" alt="image" draggable="false" style="margin-top: 40px; height: 100%; width: 100%;object-fit: cover">
                                     </div>
-                                </div>
-                                <!-- /.col-md-6 -->
+                                   
 
-                                <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="110" data-mobi="40" data-smobi="40"></div>
                                 </div>
+                            </div><!-- /.col-md-6 -->
+
+                            <div class="col-md-12">
+                                <div class="wprt-spacer" data-desktop="110" data-mobi="40" data-smobi="40"></div>
                             </div>
-                            <!-- /.row -->
-                        </div>
-                        <!-- /.container -->
+                        </div><!-- /.row -->
                     </section>
 
                     <!-- FACTS -->
                     <!-- TEAM -->
+
                 </div>
             </div>
         </div>
     </div>
 </div>
+
