--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
@@ -47,11 +47,11 @@
                                 <input type="text" asp-for="NameRu" placeholder="Name RU" id="f-name" class="form-control">
                             </div>
                         </div>
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <div class="col-lg-11">
                                 <input type="file" asp-for="formFile" id="f-name" class="form-control" multiple="multiple">
                             </div>
-                        </div>
+                        </div>*@
                         <div class="form-group" style="margin-left: 72%;">
                             <div class="col-lg-offset-2 col-lg-11">
                                 <button class="btn btn-success about-button" type="submit">Save</button>
