subservice view done

--- a/ConstructionSite/Views/About/Index.cshtml
+++ b/ConstructionSite/Views/About/Index.cshtml
@@ -40,9 +40,9 @@
 
                                 <div class="col-md-6">
                                     <div style="height: 400px;">
-                                        <img src="~/Images/about/150e8b03-ebe5-4560-8f99-649a3705765b.jpg" alt="image" draggable="false" style="margin-top: 40px; height: 100%; width: 100%;object-fit: cover">
+                                        <img src="@Model.Image" alt="image" draggable="false" style="margin-top: 40px; height: 100%; width: 100%; object-fit: cover">
                                     </div>
-                                   
+
 
                                 </div>
                             </div><!-- /.col-md-6 -->
