--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="images">
-                    <img src="~/Images/about/150e8b03-ebe5-4560-8f99-649a3705765b.jpg"  alt="image" draggable="false" style="margin-top: 40px; height: 100%; width: 100%;object-fit: cover">
+                    <img src="@Model.Image"  alt="image" draggable="false" style="margin-top: 40px; height: 100%; width: 100%;object-fit: cover">
                 </div>
 
 
