--- a/ConstructionSite/Views/Galery/Index.cshtml
+++ b/ConstructionSite/Views/Galery/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- Main Content -->
+﻿
+<!-- Main Content -->
 <div id="main-content" class="site-main clearfix main-main">
     <div id="content-wrap">
         <div id="site-content" class="site-content clearfix">
