--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
@@ -82,15 +82,28 @@
                                 <textarea type="text" asp-for="ContentRu" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
                             </div>
                         </div>
-                        <div class="form-group ">
-                            <div class="col-lg-11">
-                                <img src="@Model.path" width="240" height="280" alt="Alternate Text" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-lg-11">
-                                <input type="file" asp-for="file" placeholder="Images" id="f-name" class="form-control" />
-                            </div>
+                        <div class="wrapper--preview">
+
+                            @if (Model.Images == null | Model.Images.Count < 1)
+                            {
+                                <input type="file" asp-for="files" />
+                            }
+                            @foreach (var item in Model.Images)
+                            {
+                                <div class="box">
+                                    <div class="js--image-preview">
+                                        <img src="@item.Path" alt="Alternate Text" />
+                                        <input type="hidden" />
+                                    </div>
+                                    <div class="upload-options">
+
+                                        <label>
+
+                                            <input id="@item.Id" type="file" asp-for="files" onclick="cenerateInput(@item.Id);" />
+                                        </label>
+                                    </div>
+                                </div>
+                            }
                         </div>
 
                         <div class="form-group" style="margin-left: 72%;">
