--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -72,7 +72,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
-                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control" multiple="multiple">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 72%;">
