--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -64,7 +64,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
-                                <input type="file" name="file" id="f-name" class="form-control" placeholder="Images" required>
+                                <input multiple="multiple" type="file" name="file" id="f-name" class="form-control" placeholder="Images" required>
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 72%;">
