--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -79,7 +79,7 @@
                                     <td class="img-style">@item.Title</td>
                                     <td class="img-style">@item.Content</td>
                                     <td class="img-style"><img width="60" height="60" src="@item.Imagepath" alt="Alternate Text" /></td>
-                                    <td class="img-style">@item.CreateDate</td>
+                                    <td class="img-style">@item.CreateDate.ToString("dddd, dd MMMM yyyy")</td>
                                     <td class="edit-delete area-margin">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
                                         <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
